<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.yufeixuan</groupId>

    <artifactId>easy-captcha</artifactId>
    <version>1.5.4</version>
    <packaging>jar</packaging>

    <name>EasyCaptcha</name>
    <description>Java图形验证码，支持gif验证码、中文验证码，适用于Java Web、JavaSE项目，支持jdk11。</description>
    <url>https://github.com/yufeixuan/easycaptcha</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>The Apache Software License, Version 2.0</comments>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/yufeixuan/easycaptcha</url>
        <connection>https://github.com/yufeixuan/easycaptcha.git</connection>
    </scm>

    <developers>
        <developer>
            <name>phoenix</name>
            <id>phoenix</id>
            <email>luoxuan5678@qq.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <dependencies>
        <!-- j2ee环境 -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>rdc-releases</id>
            <url>https://repo.rdc.aliyun.com/repository/70786-release-exL3mB/</url>
        </repository>
        <snapshotRepository>
            <id>rdc-snapshots</id>
            <url>https://repo.rdc.aliyun.com/repository/70786-snapshot-Y0tgOa/</url>
        </snapshotRepository>
    </distributionManagement>
</project>